services added and navbar and mega-navbar added. code refactoring

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container-floud">
+<div class="container-fluid">
     <div class="row">
         <div class="col-md-12">
             <app-navbar></app-navbar>
+            <app-mega-navbar></app-mega-navbar>
         </div>
         <div class="col-md-12">
             <app-brand></app-brand> 
