Home Page design

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,32 @@
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-12" style="padding: 0px 0px;">
             <app-navbar></app-navbar>
-            <app-mega-navbar></app-mega-navbar>
+            <div class="border-bottom">
+                <app-mega-navbar></app-mega-navbar>
+            </div>
+
+        </div>
+
+        <div class="col-md-12">
+            <app-slogan></app-slogan>
         </div>
         <div class="col-md-12">
-            <app-brand></app-brand> 
+            <app-herousel></app-herousel>
         </div>
+        <div class="col-md-12">
+            <app-cargo></app-cargo>
+        </div>
+        <div class="col-md-12">
+            <app-low-priced-products></app-low-priced-products>
+        </div>
+
+        <div class="col-md-12">
+            <app-brand-slider></app-brand-slider>
+        </div>
+
+
     </div>
 </div>
+
+<app-footer></app-footer>
